[metadata]
name = fpx
version = 0.4.5
description = Stream archiver/proxy
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergey Motornyuk
url = https://github.com/DataShades/fpx
license = AGPL
classifiers =
        Development Status :: 3 - Alpha
        License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
                 sanic[ext]~=22.6.0
                 asyncblink==0.3.2
                 sqlalchemy~=1.4.0
                 alembic~=1.4.0
                 aiohttp[speedups]~=3.8.0
                 click
                 webargs-sanic~=2.2.0
                 pyjwt

[options.extras_require]
postgresql =
           psycopg2
test =
     sanic-testing
     pytest
     pytest-asyncio
     factory_boy
     pytest-factoryboy
     aioresponses

[options.package_data]
* = alembic.ini, migrations/**/*

[options.entry_points]
console_scripts =
                fpx = fpx.cli:fpx

[tool:pytest]
testpaths = fpx/tests
asyncio_mode = auto
