[metadata]
name = fpx
version = 0.5.5
description = Stream archiver/proxy
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergey Motornyuk
url = https://github.com/DataShades/fpx
license = AGPL
classifiers =
        Development Status :: 3 - Alpha
        License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
                 aiohttp[speedups]~=3.8.6
                 alembic~=1.12.0
                 asyncblink==0.3.2
                 click
                 httpx~=0.23.0
                 pyjwt
                 sanic[ext]~=23.6.0
                 sqlalchemy~=2.0.22
                 typing-extensions
                 webargs-sanic~=2.3.5
                 websockets>=10.0, <11.0

[options.extras_require]
postgresql =
           psycopg2
test =
     aioresponses
     factory_boy
     pytest
     pytest-asyncio
     pytest-factoryboy
     pytest-httpx
     sanic-testing~=23.6.0

[options.package_data]
* = alembic.ini, migrations/**/*

[options.entry_points]
console_scripts =
                fpx = fpx.cli:fpx
